fix 11 and 12 bugs

--- a/prac13/prac13.ipynb
+++ b/prac13/prac13.ipynb
@@ -6,7 +6,15 @@
     "id": "-yePWnZCO3-q"
    },
    "source": [
-    "# Практика 12."
+    "# 13. Условное распределение"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\rho_{\\xi|\\eta}(x|y_0) = \\frac{\\rho_{\\xi,\\eta}(x, y_0)}{\\rho_{\\eta}(y_0)}$$\n",
+    "$$\\rho_{\\xi}(x) = \\int_{-\\infty}^{\\infty} \\rho_{\\xi|\\eta}(x|y)\\rho_{\\eta}(y)dy$$"
    ]
   },
   {
@@ -16,6 +24,15 @@
    },
    "source": [
     "## Задачи на пару"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "keUXImD9bZBt"
+   },
+   "source": [
+    "**5.** Случайные величины $\\xi$ и $\\eta$ независимы и имеют показательное распределение с параметром 1. Доказать, что отношение $\\frac{\\xi}{\\xi + \\eta}$ распределено равномерно на отрезке $[0, 1]$."
    ]
   },
   {
