--- a/prac12/prac.ipynb
+++ b/prac12/prac.ipynb
@@ -92,18 +92,6 @@
    "metadata": {},
    "source": [
     "**1.**\n",
-    "Двумерное распределение пары целочисленных случайных величин $\\xi$ и $\\eta$ задаётся с помощью таблицы, где в пересечении столбца $\\xi = i$ и строки $\\eta = j$ находится вероятность $P\\lbrace{\\xi = i, \\eta = j\\rbrace}$. \n",
-    "\n",
-    "| $\\xi$ & $\\eta$     | $\\xi$ $=$ $-1$  | $\\xi$ $=$ $0$ | $\\xi$ $=$ $1$|\n",
-    "|-------------------|------------------|---------|---------|\n",
-    "|  $\\eta$ $=$ $-1$  | $\\frac{1}{8}$    | $\\frac{1}{12}$ | $\\frac{7}{24}$|\n",
-    "|  $\\eta$ $=$ $1$  | $\\frac{5}{24}$    | $\\frac{1}{6}$  | $\\frac{1}{8}$|\n",
-    "\n",
-    "Найти:\n",
-    "\n",
-    "- Ковариацию:  $Cov(\\xi, \\eta) $\n",
-    "\n",
-    "**2.**\n",
     "Совместное распределение случайных величин $\\xi$ и $\\eta$ имеет плотность\n",
     "$$\\rho_{\\xi,\\eta}(x,y) =\\left\\{\n",
     "\t\\begin{array}{cc}\n",
@@ -111,16 +99,15 @@
     "\t0, & otherwise\n",
     "\t\\end{array}\\right.$$\n",
     "Найдите \n",
-    "\n",
+    "* Маргинальные распределения $\\xi$, $\\eta$\n",
     "* $E_{\\xi}$, $E_{\\eta}$\n",
     "* $D_{\\xi}$, $D_{\\eta}$\n",
-    "* $E_{\\xi\\eta}$\n",
     "* $cov(\\xi,\\eta)$.\n",
     "\n",
-    "**3.** Пусть $X$,$Y$ - независимые случайные величины с функциями распределения $F_X=1-e^{-ax}$, $F_Y=1-e^{-by}$, $x, y, a, b>0$. Найти $E(XY)$.\n",
+    "**2.** Пусть $X$,$Y$ - независимые случайные величины с функциями распределения $F_X=1-e^{-ax}$, $F_Y=1-e^{-by}$, $x, y, a, b>0$. Найти $E(XY)$.\n",
     "\n",
-    "**4.** Найти коэффициент корреляции между $\\xi$ и $\\eta = e^{-\\xi}$ , если \n",
-    "$\\xi$ имеет стандартное нормальное распределение $N(0,1)$."
+    "**3.** Найти коэффициент корреляции между $\\xi$ и $\\eta = e^{-\\xi}$ , если \n",
+    "$\\xi$ имеет стандартное нормальное распределение с параметрами $\\mu$ и $\\sigma$."
    ]
   },
   {
@@ -134,34 +121,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.** Совместное распределение случайных величин $\\xi$ и $\\eta$ имеет плотность\n",
+    "**1.** (3) Совместное распределение случайных величин $\\xi$ и $\\eta$ имеет плотность\n",
     "$$\\rho_{\\xi,\\eta}(x,y) =\\left\\{\n",
     "\t\\begin{array}{cc}\n",
     "\t\\frac{3}{2}(x^2+y^2), & 0\\leq x\\leq 1, 0\\leq y\\leq 1 \\\\\n",
     "\t0, & otherwise\n",
     "\t\\end{array}\\right.$$\n",
-    "Найдите \n",
-    "* $E_{\\xi}$, $E_{\\eta}$\n",
-    "* $D_{\\xi}$, $D_{\\eta}$\n",
-    "* $cov(\\xi,\\eta)$.\n",
+    "Найдите\n",
+    "* (0.5) Маргинальные распределения $\\xi$, $\\eta$\n",
+    "* (1) $E_{\\xi}$, $E_{\\eta}$\n",
+    "* (0.5) $D_{\\xi}$, $D_{\\eta}$\n",
+    "* (1) $cov(\\xi,\\eta)$.\n",
     "\n",
     "**2.** Доказать, что не существует трех случайных величин $\\xi$, $\\eta$ и\n",
-    "$\\theta$ таких, что коэффициент корреляции любых двух из них равен $-1$.\n",
-    "\n",
-    "**3.** Найти коэффициент корреляции между $\\xi$ и $\\eta = e^{-\\xi}$ , если \n",
-    "$\\xi$ имеет нормальное распределение с параметрами $\\mu$ и $\\sigma$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4.** Совместное распределение $\\xi$ и $\\eta$   \n",
-    "$$\\rho(x,y) = \\frac{1}{\\pi}e^{-\\frac{(x^2 + 2xy + 5y^2)}{2}}$$\n",
-    "\n",
-    "Найти плотности распределения \n",
-    "1. маргинального распределение $\\xi$ (взять интеграл по y)\n",
-    "2. маргинального распределение $\\eta$ (взять интеграл по x)"
+    "$\\theta$ таких, что коэффициент корреляции любых двух из них равен $-1$.\n"
    ]
   },
   {
@@ -170,7 +143,7 @@
     "id": "PjGE3WtZRsbY"
    },
    "source": [
-    "**5.** Пусть случайные величины $\\xi$ и $\\eta$ имеют нулевые средние значения, единичные дисперсии\n",
+    "**3.** Пусть случайные величины $\\xi$ и $\\eta$ имеют нулевые средние значения, единичные дисперсии\n",
     "и коэффициент корреляции $c$. Показать,\n",
     "что $E\\max{(\\xi^2,\\eta^2)} \\geq 1 + \\sqrt{1 - c^2} $.\n"
    ]
