--- a/prac12/prac.ipynb
+++ b/prac12/prac.ipynb
@@ -46,6 +46,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Для удобства, нам нужно находить **маргинальные** распределения сл. вел.\n",
+    "\n",
+    "$$\\rho_{\\xi}(x) = \\int_{-\\infty}^{\\infty} \\rho_{\\xi, \\eta}(x, y)dy$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Остальное все аналогично"
    ]
   },
@@ -98,6 +107,7 @@
     "\tx+y, & 0\\leq x\\leq 1, 0\\leq y\\leq 1 \\\\\n",
     "\t0, & otherwise\n",
     "\t\\end{array}\\right.$$\n",
+    "    \n",
     "Найдите \n",
     "* Маргинальные распределения $\\xi$, $\\eta$\n",
     "* $E_{\\xi}$, $E_{\\eta}$\n",
@@ -128,9 +138,8 @@
     "\t0, & otherwise\n",
     "\t\\end{array}\\right.$$\n",
     "Найдите\n",
-    "* (0.5) Маргинальные распределения $\\xi$, $\\eta$\n",
+    "* (1) Маргинальные распределения $\\xi$, $\\eta$\n",
     "* (1) $E_{\\xi}$, $E_{\\eta}$\n",
-    "* (0.5) $D_{\\xi}$, $D_{\\eta}$\n",
     "* (1) $cov(\\xi,\\eta)$.\n",
     "\n",
     "**2.** Доказать, что не существует трех случайных величин $\\xi$, $\\eta$ и\n",
