--- a/prac14/prac.ipynb
+++ b/prac14/prac.ipynb
@@ -44,9 +44,22 @@
    "id": "22e7dc9e-e7c7-4982-b3eb-c8578126db45",
    "metadata": {},
    "source": [
-    "$$E(\\xi|\\eta)(y) = \\sum xP(\\xi=x|\\eta=y)dx$$\n",
+    "Матожидание строится аналогично стандартному, **но** условное матожидание - это **функция** от условния. \n",
     "\n",
-    "$$E(\\xi|\\eta)(y) = \\int_{-\\infty}^{\\infty}x\\rho_{\\xi|\\eta}(x|y)dx$$"
+    "$$\\mathbb{E}(\\xi|\\eta)(y) = \\sum xP(\\xi=x|\\eta=y)dx$$\n",
+    "\n",
+    "$$\\mathbb{E}(\\xi|\\eta)(y) = \\int_{-\\infty}^{\\infty}x\\rho_{\\xi|\\eta}(x|y)dx$$\n",
+    "\n",
+    "Для разбиения $H = (H_1, H_2, H_3)$\n",
+    "\n",
+    "$$\\mathbb{E}(\\xi|H) = \\left\\{\n",
+    "\t\\begin{array}{ccc}\n",
+    "\t\\mathbb{E}(\\xi|H_1), H=H_1 \\\\\n",
+    "    \\mathbb{E}(\\xi|H_2), H=H_2 \\\\\n",
+    "    \\mathbb{E}(\\xi|H_3), H=H_3 \\\\\n",
+    "\t\\end{array} \\right.$$\n",
+    "\n",
+    "\n"
    ]
   },
   {
