--- a/prac14/prac.ipynb
+++ b/prac14/prac.ipynb
@@ -93,10 +93,10 @@
    "source": [
     "**3.** Двумерное распределение пары целочисленных случайных величин $\\xi$ и $\\eta$ задаётся с помощью таблицы,\n",
     "\n",
-    "|$\\xi$, $\\eta$|$\\xi$ = $-1$|$\\xi$ = $0$|$\\xi$ = $1$|    \n",
+    "|$\\xi, \\eta$|$\\xi = -1$|$\\xi = 0$|$\\xi = 1$|    \n",
     "|-|-------------------|------------------|---------|\n",
-    "|$\\eta$ = $-1$| $\\frac{1}{8}$     |$\\frac{1}{12}$     |$\\frac{7}{24}$ |\n",
-    "|$\\eta$ = $1$| $\\frac{5}{24}$   |$\\frac{1}{6}$     |$\\frac{1}{8}$ |\n",
+    "|$\\eta = -1$| $\\frac{1}{8}$     |$\\frac{1}{12}$     |$\\frac{7}{24}$ |\n",
+    "|$\\eta = 1$| $\\frac{5}{24}$   |$\\frac{1}{6}$     |$\\frac{1}{8}$ |\n",
     "\n",
     "где в пересечении столбца $\\xi = i$ и строки $\\eta = j$ находится вероятность $P\\lbrace{\\xi = i, \\eta = j\\rbrace}$. Найти:\n",
     "\n",
