--- a/prac11/prac.ipynb
+++ b/prac11/prac.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "Пусть $\\eta = g(\\xi)$, где $g$- монотонная функция, тогда плотность $\\eta$ можно вырадить как\n",
     "\n",
-    "$$\\rho_{\\eta}(x) = \\frac{\\rho_{\\xi}(g^{-1}(x))}{g'(g^{-1}(x))}$$"
+    "$$\\rho_{\\eta}(x) = \\frac{\\rho_{\\xi}(g^{-1}(x))}{|g'(g^{-1}(x))|}$$"
    ]
   },
   {
