fix bugs 12 home

--- a/prac12/prac.ipynb
+++ b/prac12/prac.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "Корреляция двух случайных величин\n",
     "\n",
-    "$$cor(\\xi, \\mu) = \\frac{cov(\\xi, \\mu)}{\\mathbb{D}[\\xi]\\mathbb{D}[\\mu]}$$"
+    "$$cor(\\xi, \\mu) = \\frac{cov(\\xi, \\mu)}{\\sqrt{\\mathbb{D}[\\xi]\\mathbb{D}[\\mu]}}$$"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "source": [
     "**3.** Пусть случайные величины $\\xi$ и $\\eta$ имеют нулевые средние значения, единичные дисперсии\n",
     "и коэффициент корреляции $c$. Показать,\n",
-    "что $E\\max{(\\xi^2,\\eta^2)} \\geq 1 + \\sqrt{1 - c^2} $.\n"
+    "что $E\\max{(\\xi^2,\\eta^2)} \\leq 1 + \\sqrt{1 - c^2} $.\n"
    ]
   },
   {
