--- a/prac13/prac.ipynb
+++ b/prac13/prac.ipynb
@@ -55,6 +55,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Можем повесить на это интеграл и получить. $A$ - некоторое событие, которое получится при интегрировании по $B_A$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\int_{B_A}\\rho_{\\eta}(y)dy = P(A) = \\int_{-\\infty}^{+\\infty}P(A|\\xi=x)\\rho_{\\xi}(x)dx = \\int_{-\\infty}^{+\\infty}\\int_{B_A}\\rho_{\\eta|\\xi}(y|x)\\rho_{\\xi}(x)dx$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "И вывод Баеса\n",
     "\n",
     "$$\\rho_{\\xi|\\eta}(x| y) = \\frac{\\rho_{\\xi,\\eta}(x, y)}{\\rho_{\\eta}(y)} = \\frac{\\rho_{\\eta|\\xi}(y| x)\\rho_{\\xi}(x)}{\\int_{-\\infty}^{\\infty} \\rho_{\\eta|\\xi}(y|x)\\rho_{\\xi}(x)dx}$$"
@@ -108,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.** Пусть $\\theta \\sim U[a_1, a_2]$ ($a_1, a_2 > 0$), а $X \\sim Exp(\\theta)$. Это значит мы знаем $\\rho_{alpha}$ и $\\rho_{X|\\theta}$\n",
+    "**3.** Пусть $\\theta \\sim U[a_1, a_2]$ ($a_1, a_2 > 0$), а $X \\sim Exp(\\theta)$. Это значит мы знаем $\\rho_{\\theta}$ и $\\rho_{X|\\theta}$\n",
     "Найдите априорное распределение $X$ $\\rho_{X}$ и апостериорное $\\rho_{\\theta|X}$ "
    ]
   },
