--- a/prac13/prac.ipynb
+++ b/prac13/prac.ipynb
@@ -128,15 +128,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4.** Димас напился и купил 10 одинаковых жигулей с сломанным табло бензобака. Ему стало интересно, а какой объем бензобака у этих жиг. Интернету он не доверяет, поэтому решил поставить эксперимент. Он вылил бензин из каждой жиги и получил 10 чисел (25, 9, 12, 15, 3, 30, 17, 18, 24, 22). Он прикинул, что объем где-то от 30 до 40 литров, а в каждой из жиг также осталось какое-то кол-во бензина от старых хозяев от 0 до полного объема бензобака. Помогите Димасу оценить объем бензобака. \n",
-    "\n",
-    "Найдите апостериорное распределение на объем бензобака исходя их того, что объем бензобака и остатки распределены равномерно."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "kWAf1ncpPYA3"
    },
@@ -161,30 +152,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.** (2)Пусть $a \\sim U[0, 1]$, $b \\sim U[0, a]$, а $X \\sim U[0, b]$. Это значит мы знаем $\\rho_{a}$,  $\\rho_{b|a}$, $\\rho_{X|b}$.\n",
-    "Найдите \n",
-    "* (1) априорные распределения $\\rho_{b}$, $\\rho_{X}$\n",
-    "* (1) апостериорные $\\rho_{b|X}$, $\\rho_{a|X}$ "
+    "**2.** Пусть $a \\sim U[1, 2]$, $b \\sim Exp(a)$, а $c \\sim N(b, a)$. \n",
+    "Найдите совместное распределение $\\rho_{a,b,c}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.** Пусть у нас есть выборка из $X_1,\\ldots, X_n \\sim U[0,\\theta]$ ( плотность $X_i$ равна $\\rho(X|\\theta)$). **Сопряженным** распределением $p(\\theta)$ к $p(X|\\theta)$ называется такое распределение, что $p(\\theta|X)$ лежит в том же семействе, что и $p(\\theta)$ (например $p(\\theta)$ и $p(\\theta|X)$ - оба нормальные, но с разными параметрами)\n",
+    "**3.** Алина купила новое средство против сорняков. Всего сорняков, она прикинула от 900, до 1100. На них всех она распылила средство, на котором написано, что оно эффективно на 99.5 - 99.9 процентов. Найти вероятность того, что все сорняки вымрут, останится 1 сорняк, останется 2 сорняка?\n",
     "\n",
-    "Докажите, что распределение Парето $\\rho(\\theta) = \\frac{ka^k}{x^{k+1}}$ ($a,k$ - просто константы), является **сопряженным** к $p(X|\\theta)$. \n",
+    "Для простоты вычислений можете считать, что распределение количества сорняков - непрерывное."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4.** Пусть у нас есть выборка из $X_1,\\ldots, X_n \\sim U[0,\\theta]$ ( плотность $X_i$ равна $\\rho(X|\\theta)$). **Сопряженным** распределением $p(\\theta)$ к $p(X|\\theta)$ называется такое распределение, что $p(\\theta|X)$ лежит в том же семействе, что и $p(\\theta)$ (например $p(\\theta)$ и $p(\\theta|X)$ - оба нормальные, но с разными параметрами)\n",
+    "\n",
+    "Докажите, что распределение Парето $\\rho(\\theta) = \\frac{ka^k}{x^{k+1}}$ ($a,k$ - просто константы, причем $x < a$), является **сопряженным** к $p(X|\\theta)$. \n",
     "\n",
     "Вам нужно найти $\\rho(\\theta|X)$ и показать, что оно тоже распределено по Парето."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4.** 6 друзей решили собраться встретиться в баре. Но Настя забыла во сколько все решили собраться. Помнит только что с 0 до 1. Чтобы не спалиться, что она все забыла, она пришла самой первой в 0 и смотрела во сколько все приходят. Получила результат (0.8, 1.3, 1.2, 1.5, 1). При этом она знает, что каждый ее друг мог равновероятно опоздать на час. \n",
-    "\n",
-    "Помогите Насте восстановить изначальное время встречи, а лучше распределение даты встречи исходя из полученных ей данных.  "
    ]
   },
   {
@@ -195,6 +184,30 @@
    "source": [
     "## Гробы <a class=\"anchor\" id=\"chapter4\"></a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** (2) Дана система с.в. $(X,Y)$. При этом $X$ имеет распределение Пуассона, а $Y$ имеет условное при $X=k$ Гамма распределение.\n",
+    "Найти двумерную функцию распределения системы? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2.** Пусть $X$ и $Y$ независимы и нормально распределены с параметрами $(m_1, d_1)$ и $(m_2, d_2)$. \n",
+    "* Найдите условное распределение $X + Y$ при условии $X = a$\n",
+    "* условное распределение $X$ при условии $X+Y=b$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
